# Sports-Aerodynamics

./: .gitignore  PLAN.md  README.md  _quarto.yml  custom.css  index.qmd  pyproject.toml  shot.qmd  sports2.ipynb  sports3.ipynb  tactical.qmd  theory.qmd
assets/: AGENTS.md
docs/: index.html  shot.html  tactical.html  theory.html
src/: build_all.py  domain.py  shot_aero.py  tactical.py  utils.py
