[project]
name = "sports-aerodynamics"
version = "0.1.0"
description = "The Physics of Play — Aerodynamics in Summer Sports & FIFA World Cup 2026"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "phiflow>=3.4.0",
    "jax[cpu]",
    "matplotlib",
    "numpy",
    "tqdm",
    "jupyter>=1.1.1",
    "svg-path>=7.0",
]
